name:           hans
version:        3.0.0.0
cabal-version:  >= 1.22
license:        BSD3
license-file:   LICENSE
author:         Galois Inc.
maintainer:     halvm-devel@community.galois.com
category:       Networking
synopsis:       Network Stack
build-type:     Simple
description:
  HaNS is a lightweight, pure Haskell network stack that can be used for Haskell
  networking in the context of the HaLVM, or with a Linux tap device.

source-repository head
        type:           git
        location:       git://github.com/GaloisInc/HaNS.git

library
        if os(HALVM)
                cpp-options:            -DHANS_TARGET_XEN
                build-depends:          XenDevice >= 2.0.0 && < 3,
                                        HALVMCore >= 2.0.0 && < 3
                other-modules:          Hans.Device.Xen

        if os(darwin) || os(linux)
                cpp-options:            -DHANS_TARGET_UNIX
                build-depends:          unix
                other-modules:          Hans.Device.Tap
                include-dirs:           cbits
                c-sources:              cbits/tapdevice.c

        default-language:       Haskell2010

        ghc-options:            -Wall -threaded
        hs-source-dirs:         src
        build-depends:          base       >= 4.0.0.0 && < 5,
                                bytestring,
                                stm,
                                array

        exposed-modules:        Hans
                                Hans.Device
                                Hans.Protocol.Ethernet
        other-modules:          Hans.Device.Types
                                Hans.Monad
                                Hans.Input
